# MeetSimul

./: .gitignore  CHANGELOG.md  INSTALL.md  api_engine.py  gen_icon.py  out.aiff  requirements.txt  start.command
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/resources/: local_tts.swift  speech_recognizer.swift
frontend/src-tauri/src/: lib.rs
frontend/src/components/: BlackholeModal.tsx  GlossaryEditor.tsx  Header.tsx  HistoryPanel.tsx  InputPanel.tsx  Onboarding.tsx  SettingsPage.tsx  TranslationPanel.tsx  VoiceSelector.tsx
frontend/src/hooks/: useSettings.ts  useTranslation.ts
frontend/src/types/: index.ts
frontend/src/utils/: systemPromptFilter.ts
